# Software-Systems-Lab

outlab 1/Bash/: references.txt
outlab 1/Bash/code/: download.sh  evaluate.sh  organise.sh
outlab 1/Git/: report.txt
outlab 2/: Biblio.bib  main.tex
outlab 3/: references.txt
outlab 3/numpy/q2_a/: operations1.py  operations2.py  operations3.py  operations4.py  operations5.py
outlab 3/numpy/q2_b/: pca.py
outlab 3/python/q1_a/: olympics.py
outlab 3/python/q1_b/: win.py
outlab 3/scipy/: q3_a.py
outlab 4/mysite/: .gitignore.txt  requirements.txt
outlab 4/mysite/accounts/: forms.py  models.py  urls.py  views.py
outlab 4/mysite/mysite/: settings.py  urls.py
outlab 5/Bonus/: bonus.sh
outlab 5/Q1/: Q1.sh
outlab 5/Q2/: Q2.sh
outlab 5/Q3/: Q3.sh
outlab 5/Q4/: Q4.sh
outlab 5/Q5/: Q5.sh
outlab 5/solutions/: grading_scheme_for_outlab_5.txt
outlab 5/solutions/Bonus/: sample_input_0.txt  sample_input_1.txt  sample_input_2.txt  sample_input_3.txt  sample_input_4.txt  sample_output_1.txt  sample_output_3.txt  sample_output_4.txt
outlab 5/solutions/Q1/: sample_1.txt  sample_2.txt  sample_3.txt  sample_4.txt  sample_output_1.txt  stopwords_0.txt  (+4 more)
outlab 6/q1/: q1.java
outlab 6/q2/: q2.java
outlab 6/q3/: q3.java
outlab 6/q4/: Matrix.java
outlab 6/q5/: Person.java  Student.java  Teacher.java
outlab 7/bobby/: Moderator.java  ScotlandYard.java  ServerThread.java
outlab 8/: References.txt
outlab 8/q2/: t1.gdb  t2.gdb  t3.gdb  t4.gdb  t5.gdb  t6.gdb  t7.gdb  t8.gdb
outlab 8/q3/: CMakeLists.txt  rawmake
outlab 8/q3/mygame/: CMakeLists.txt
(+41 files in other folders)
